<resources>
    <string name="app_name">Tiny Daycare</string>

    // Bottom Navigation
    <string name="bottomNav_home">Home</string>
    <string name="bottomNav_collection">Collection</string>
    <string name="bottomNav_adopt">Adopt</string>
    <string name="bottomNav_settings">Settings</string>

    // Home Screen
    <string name="title_activity_home_screen">Home</string>
    <string name="carecoins_label">CareCoins:</string>
    <string name="user_carecoins">0</string>
    <string name="new_player_message">Go to the Adopt screen to get your first Pokemon!</string>
    <string name="steps_label">Steps Until Hatching:</string>
    <string name="user_steps">0</string>
    <string name="steps_slash">/</string>
    <string name="steps_required">250</string>
    <string name="play_button">Play</string>
    <string name="feed_button">Feed</string>
    <string name="hatch_button">Hatch!</string>

    // Adopt Screen
    <string name="title_activity_adopt_screen">Adopt</string>
    <string name="tap_to_adopt">Tap an egg to adopt!</string>
    <string name="cost_small">Cost: 500 CareCoins</string>
    <string name="cost_medium">Cost: 750 CareCoins</string>
    <string name="cost_large">Cost: 1000 CareCoins</string>
    <string name="toast_adopt_small">You adopted a small-sized Pokemon!</string>
    <string name="toast_adopt_medium">You adopted a medium-sized Pokemon!</string>
    <string name="toast_adopt_large">You adopted a large-sized Pokemon!</string>

    // Collection Screen
    <string name="title_activity_collection_screen">Collection</string>
    <string name="switch_dialog_title">Switch creature?</string>
    <string name="switch_dialog_message">Press "Yes" to switch to this creature</string>
    <string name="switch_dialog_positive">Yes</string>
    <string name="switch_dialog_negative">No</string>

    // Settings Screen
    <string name="title_activity_settings_screen">Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="notif_enabled">Push Notifications enabled</string>
    <string name="notif_disabled">Push Notifications disabled</string>
    <string name="sound_enabled">Sounds enabled</string>
    <string name="sound_disabled">Sounds disabled</string>
    <string name="vibrate_enabled">Vibrations enabled</string>
    <string name="vibrate_disabled">Vibrations disabled</string>
    <string name="setting_toast_error">An error occurred setting Toast text</string>
    <string name="title_activity_bottom_nav">BottomNav</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="careCoins_error">You don\'t have enough CareCoins to adopt</string>

</resources>
