<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottomNav_home"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/bottomNav_collection"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/navigation_adopt"
        android:icon="@drawable/egg_sprite"
        android:title="@string/bottomNav_adopt"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottomNav_settings"
        app:showAsAction="ifRoom|withText"/>

</menu>
