<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.jls6595.tinydaycare.adopt_screen">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/carecoins_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/carecoins_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_carecoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/user_carecoins"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/carecoins_label"
        app:layout_constraintTop_toTopOf="@+id/carecoins_label" />

    <TextView
        android:id="@+id/tap_to_adopt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/tap_to_adopt"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/smallEgg"
        app:layout_constraintTop_toBottomOf="@id/carecoins_label" />

    <TextView
        android:id="@+id/cost_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_small"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/smallEgg" />

    <TextView
        android:id="@+id/cost_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_medium"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/mediumEgg" />

    <TextView
        android:id="@+id/cost_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_large"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/largeEgg" />

    <ImageView
        android:id="@+id/smallEgg"
        android:layout_width="wrap_content"
        android:layout_height="169dp"
        android:onClick="eggClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/egg_sprite_small"
        app:layout_constraintBottom_toTopOf="@id/mediumEgg"
        app:layout_constraintTop_toBottomOf="@id/tap_to_adopt"/>

    <ImageView
        android:id="@+id/mediumEgg"
        android:layout_width="wrap_content"
        android:layout_height="169dp"
        android:onClick="eggClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/egg_sprite_medium"
        app:layout_constraintTop_toBottomOf="@id/smallEgg"
        app:layout_constraintBottom_toTopOf="@id/largeEgg" />

    <ImageView
        android:id="@+id/largeEgg"
        android:layout_width="wrap_content"
        android:layout_height="169dp"
        android:onClick="eggClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/egg_sprite_large"
        app:layout_constraintTop_toBottomOf="@id/mediumEgg"
        app:layout_constraintBottom_toTopOf="@id/navigation"/>

</android.support.constraint.ConstraintLayout>
