<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.jls6595.tinydaycare.settings_screen">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <Switch
        android:id="@+id/push_notifications"
        android:onClick="settingsToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:switchPadding="23dp"
        android:text="@string/push_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sound"
        android:onClick="settingsToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:checked="true"
        android:switchPadding="100dp"
        android:text="@string/sound"
        app:layout_constraintStart_toStartOf="@+id/push_notifications"
        app:layout_constraintTop_toBottomOf="@+id/push_notifications" />

    <Switch
        android:id="@+id/vibrate"
        android:onClick="settingsToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:checked="true"
        android:switchPadding="98dp"
        android:text="@string/vibrate"
        app:layout_constraintStart_toStartOf="@+id/sound"
        app:layout_constraintTop_toBottomOf="@+id/sound" />

</android.support.constraint.ConstraintLayout>
